--- a/frontend/proyecto/src/Navbar.css
+++ b/frontend/proyecto/src/Navbar.css
@@ -74,3 +74,29 @@
   height: 20px;
   pointer-events: none; 
 }
+
+@media only screen and (max-width: 480px) {
+  .Navbar {
+    padding: 5px;
+  }
+  .Navbar img {
+    width: 50px;
+    height: auto;
+  }
+  .Navbar nav {
+    flex-direction: column;
+    align-items: center;
+  }
+  .Navbar ul {
+    flex-direction: column;
+  }
+  .Navbar ul li {
+    margin: 5px 0;
+  }
+  .search-box {
+    width: 100%;
+  }
+  .search-box input {
+    padding: 5px;
+  }
+}
